# Code-Clinic-C-

Chap06/: BWString.cpp  BWString.h  BWXML.cpp  BWXML.h  CSV.cpp  CSV.h  Makefile  main.cpp
Chap06/HTML/: main.css  table.css  template.html
Image Analysis/ImageMatch/: BWString.cpp  BWString.h  CMakeLists.txt  JPEGData.cpp  JPEGData.h  Makefile  main.cpp
Image Sort By Metadata/: BWCLS.h  BWString.cpp  BWString.h  ImageMeta.cpp  ImageMeta.h  Makefile  main.cpp
Lake Pend Oreille/: BWLPO.cpp  BWLPO.h  CMakeLists.txt  Makefile  lpo.db  main.cpp
Lake Pend Oreille/BWLib/: BWCGI.cpp  BWCGI.h  BWDB.cpp  BWDB.h  BWNumber.cpp  BWNumber.h  BWString.cpp  BWString.h  BWWebGet.cpp  BWWebGet.h  Makefile  main.cpp
nQueens/: BWCLS.cpp  BWCLS.h  BWString.cpp  Makefile  NQ.cpp  NQ.h  main.cpp  nQueens
